--- a/projects/01_fyyur/end_code/templates/forms/new_venue.html
+++ b/projects/01_fyyur/end_code/templates/forms/new_venue.html
@@ -9,33 +9,47 @@
         {{ form.name(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label>City & State</label>
-          <div class="form-inline">
-            <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
-            </div>
-            <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
-            </div>
+        <label>City & State</label>
+        <div class="form-inline">
+          <div class="form-group">
+            {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
           </div>
+          <div class="form-group">
+            {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+          </div>
+        </div>
       </div>
       <div class="form-group">
         <label for="address">Address</label>
         {{ form.address(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
+        <label for="phone">Phone</label>
+        {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
+      </div>
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=geners, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+        <label for="facebook">Facebook Link</label>
+        {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=facebook, autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="image_link">Image Link</label>
+        {{ form.image_link(class_ = 'form-control', placeholder='http://', id='image_link', autofocus = true, type="url") }}
+      </div>
+      <div class="form-group">
+        <label for="website">Website Link</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', id='website', autofocus = true, type="url") }}
+      </div>
+  
+      <div class="form-group">
+        <label for="seeking_description">Seeking talent?</label>
+        {{ form.seeking_talent(id='seeking_talent', autofocus = true) }}
+        {{ form.seeking_description(class_ = 'form-control', id='seeking_description', placeholder='Seeking description', autofocus = true) }}
+      </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
