added artist and show and clean files

--- a/projects/01_fyyur/end_code/templates/pages/show_artist.html
+++ b/projects/01_fyyur/end_code/templates/pages/show_artist.html
@@ -70,6 +70,9 @@
 		</div>
 		{% endfor %}
 	</div>
+	<div>
+		<a class="btn btn-primary" href="/artists/{{artist.id}}/edit">Edit</a>
+	</div>
 </section>
 
 {% endblock %}
