--- a/projects/01_fyyur/end_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/end_code/templates/pages/show_venue.html
@@ -73,6 +73,9 @@
 		</div>
 		{% endfor %}
 	</div>
+	<div>
+		<a class="btn btn-primary" href="/venues/{{venue.id}}/edit">Edit</a>
+	</div>
 </section>
 
 {% endblock %}
