--- a/projects/01_fyyur/end_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/end_code/templates/forms/edit_venue.html
@@ -52,6 +52,9 @@
       </div>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
+    <form class="form" method="post" action="/venues/{{venue.id}}/delete">
+      <input type="submit" value="Delete Venue" class="btn btn-danger btn-lg btn-block">
+    </form>
     <br>
   </div>
 {% endblock %}
